# projecteuler

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
1/: CMakeLists.txt  main.c
10/: CMakeLists.txt  main.c
11/: CMakeLists.txt  main.c
12/: CMakeLists.txt  main.c
13/: CMakeLists.txt  a  main.c
14/: CMakeLists.txt  main.c
15/: CMakeLists.txt  main.c
16/: CMakeLists.txt  main.c
17/: main.c
18/: CMakeLists.txt  main.c
19/: CMakeLists.txt  main.c
2/: CMakeLists.txt  main.c
20/: CMakeLists.txt  main.c
21/: CMakeLists.txt  main.c
22/: CMakeLists.txt  main.c
23/: CMakeLists.txt  main.c
24/: 24.sh  CMakeLists.txt  main.c
25/: CMakeLists.txt  main.c
27/: CMakeLists.txt  main.c
28/: CMakeLists.txt  main.c
29/: 29.sh  CMakeLists.txt  main.c
3/: CMakeLists.txt  main.c
31/: CMakeLists.txt  main.c
32/: 32.sh  CMakeLists.txt  main.c
33/: CMakeLists.txt  main.c
34/: CMakeLists.txt  main.c
35/: CMakeLists.txt  main.c
36/: CMakeLists.txt  main.c
37/: CMakeLists.txt  main.c
38/: CMakeLists.txt  main.c
39/: CMakeLists.txt  main.c
4/: CMakeLists.txt  main.c
41/: CMakeLists.txt  main.c
5/: CMakeLists.txt  main.c
6/: CMakeLists.txt  main.c
67/: CMakeLists.txt  main.c
7/: CMakeLists.txt  main.c
8/: CMakeLists.txt  main.c
9/: CMakeLists.txt  main.c
